Replace Paths::get with Path::of
Since Java 11, `Paths::get` simply calls `Paths::of`. With JUnit 6 the
minimum Java version is 17, so we can safely do this.